policy/containerconstraint/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
  labels:
    mamezou.com/owner: kudoh
    mamezou.com/system: PoC
spec:
  containers:
  - image: kudohn/app1:v1
    name: my-app
